# rustratify

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: architecture.md
examples/: sea_module.rs
src/: config.rs  error.rs  lib.rs  prelude.rs  provider.rs  registry.rs  stream.rs
tests/: integration_test.rs
